--- a/default.env
+++ b/default.env
@@ -45,9 +45,8 @@ DDNS_PROXY=true
 # Nimbus peer count should not be set below 70. CL_MIN_PEER_COUNT is used for Teku only.
 CL_MAX_PEER_COUNT=
 CL_MIN_PEER_COUNT=
-# Maximum active peers for EL. EL_MIN_PEER_COUNT is used for Akula only.
+# Maximum active peers for EL.
 EL_MAX_PEER_COUNT=
-EL_MIN_PEER_COUNT=
 
 # Beaconcha.in API key for sending client stats. Automatic for Lighthouse and Teku, or with prysm-stats.yml / nimbus-stats.yml
 # Specify as just the API key as found at https://beaconcha.in/user/settings#api, and give the machine name separately
@@ -186,12 +185,6 @@ NM_DOCKERFILE=Dockerfile.binary
 GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 GETH_DOCKER_TAG=stable
 GETH_DOCKERFILE=Dockerfile.binary
-
-#Akula
-# SRC build target can be a tag or a branch
-AKULA_SRC_BUILD_TARGET=master
-AKULA_DOCKER_TAG=
-AKULA_DOCKERFILE=Dockerfile.source
 
 # staking-deposit-cli
 # SRC build target can be a tag or a branch
