disable early access feature snapshot storage
via issue https://github.com/hyperledger/besu/issues/4764

--- a/besu.yml
+++ b/besu.yml
@@ -74,9 +74,9 @@ services:
       - --metrics-port
       - "6060"
       - --data-storage-format=BONSAI
-      - --Xbonsai-use-snapshots=true
-#      - --sync-mode=X_CHECKPOINT
-      - --sync-mode=X_SNAP
+      - --Xbonsai-use-snapshots=false
+      - --sync-mode=X_CHECKPOINT
+#      - --sync-mode=X_SNAP
 volumes:
   besu-eth1-data:
   jwtsecret:
