--- a/nethermind/Dockerfile.binary
+++ b/nethermind/Dockerfile.binary
@@ -1,6 +1,6 @@
 ARG DOCKER_TAG
 
-FROM ghcr.io/tomwright/dasel:latest as dasel
+FROM ghcr.io/tomwright/dasel:v1.27.3-alpine as dasel
 
 FROM nethermind/nethermind:${DOCKER_TAG}
 
