Be more deliberate about alpine and traefik tags

--- a/default.env
+++ b/default.env
@@ -127,7 +127,7 @@ MEV_NODE=http://mev-boost:18550
 SSV2_NODE_TAG=latest
 
 # MEV-Boost
-# If mev-boost terminates with a SIGILL, make this "latest-portable"
+# If mev-boost terminates with a SIGILL, make this one of the "portable" tags
 MEV_DOCKER_TAG=latest
 MEV_DOCKERFILE=Dockerfile.binary
 
