--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -12,7 +12,7 @@ WORKDIR /src
 RUN bash -c "git clone https://github.com/ethereum/go-ethereum.git && cd go-ethereum && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:geth-pr; git checkout geth-pr; else git checkout ${BUILD_TARGET}; fi && make geth"
 
 # Pull all binaries into a second stage deploy container
-FROM alpine:latest
+FROM alpine:3
 
 ARG USER=geth
 ARG UID=10001
