Add experimental support for Nimbus EL

--- a/default.env
+++ b/default.env
@@ -186,6 +186,12 @@ GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1
 GETH_DOCKER_TAG=stable
 GETH_DOCKERFILE=Dockerfile.binary
 
+# Nimbus EL
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+NIMEL_SRC_BUILD_TARGET=master
+NIMEL_DOCKER_TAG=nonesuch
+NIMEL_DOCKERFILE=Dockerfile.source
+
 # staking-deposit-cli
 # SRC build target can be a tag or a branch
 DEPCLI_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
