SIGINT for Nimbus EL

--- a/nimbus-el.yml
+++ b/nimbus-el.yml
@@ -17,6 +17,7 @@ services:
         - BUILD_TARGET=${NIMEL_SRC_BUILD_TARGET}
         - DOCKER_TAG=${NIMEL_DOCKER_TAG}
     stop_grace_period: 3m
+    stop_signal: SIGINT
     image: nimbus-el:local
     user: user
     environment:
