Host map additional P2P ports for Erigon

--- a/default.env
+++ b/default.env
@@ -77,6 +77,9 @@ EL_RPC_PORT=8545
 EL_WS_PORT=8546
 # Erigon's torrent port. Don't make this 42070, that'll fail
 ERIGON_TORRENT_PORT=42069
+# Erigon's second and third P2P port, used for multiple eth/xx P2P protocols
+ERIGON_P2P_PORT_2=30304
+ERIGON_P2P_PORT_3=30305
 # SSV Node ports
 SSV_P2P_PORT=13001
 SSV_P2P_PORT_UDP=12001
