Support Nimbus v22.12.0 binary build

--- a/default.env
+++ b/default.env
@@ -138,6 +138,7 @@ MEV_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NIM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 NIM_DOCKER_TAG=multiarch-latest
+NIM_DOCKER_VC_TAG=multiarch-latest
 NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
@@ -157,6 +158,7 @@ LH_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag or a branch
 PRYSM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 PRYSM_DOCKER_TAG=stable
+PRYSM_DOCKER_VC_TAG=stable
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
