--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -1,4 +1,5 @@
 ARG DOCKER_TAG
+ARG DOCKER_VC_TAG
 FROM prysmaticlabs/prysm-beacon-chain:${DOCKER_TAG} as ccsource
 
 FROM debian:bullseye-slim as consensus
@@ -41,7 +42,7 @@ USER ${USER}
 
 ENTRYPOINT ["beacon-chain"]
 
-FROM prysmaticlabs/prysm-validator:${DOCKER_TAG} as vcsource
+FROM prysmaticlabs/prysm-validator:${DOCKER_VC_TAG} as vcsource
 
 FROM consensus as validator
 
