--- a/erigon.yml
+++ b/erigon.yml
@@ -22,7 +22,8 @@ services:
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - EL_EXTRAS=${EL_EXTRAS:-}
-      - WRITE_MAP=true
+# Experimental
+      #- WRITE_MAP=true
     volumes:
       - erigon-el-data:/var/lib/erigon
       - /etc/localtime:/etc/localtime:ro
