Fix docker data-root parsing (#1118)
* Fix docker data-root parsing

* Erigon comment

--- a/erigon.yml
+++ b/erigon.yml
@@ -22,6 +22,8 @@ services:
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - EL_EXTRAS=${EL_EXTRAS:-}
+# Experimental
+      #- WRITE_MAP=true
     volumes:
       - erigon-el-data:/var/lib/erigon
       - /etc/localtime:/etc/localtime:ro
