Run Grafana as non-root user

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,14 +1,15 @@
 FROM grafana/grafana:latest
 
 USER root
-RUN apk --update add wget tree jq sed
+RUN apk --update add wget tree jq sed su-exec
 
 RUN mkdir -p /etc/grafana/provisioning/dashboards/
 RUN mkdir -p /etc/grafana/provisioning/datasources/
-COPY ./dashboard.yml /etc/grafana/provisioning/dashboards/
-COPY ./datasource.yml /etc/grafana/provisioning/datasources/
-COPY ./provision-dashboards.sh /usr/local/bin/
-COPY ./nethermind_dashboard.json /tmp/
+RUN chown -R grafana:root /etc/grafana/
+COPY --chown=grafana:root ./dashboard.yml /etc/grafana/provisioning/dashboards/
+COPY --chown=grafana:root ./datasource.yml /etc/grafana/provisioning/datasources/
+COPY --chown=grafana:root ./provision-dashboards.sh /usr/local/bin/
+COPY --chown=grafana:root ./nethermind_dashboard.json /tmp/
 # Belt and suspenders
 RUN chmod -R 755 /usr/local/bin/*
 
