--- a/grafana.yml
+++ b/grafana.yml
@@ -136,6 +136,8 @@ services:
     build:
       context: ./grafana
     image: grafana:local
+    # Defaults to root user. The script adjusts permissions and switches to grafana user since 12/26/2022
+    # This can be changed after a must-have update has been deployed by most (all?) users - possibly late 2023.
     environment:
       - GF_SERVER_HTTP_PORT=${GRAFANA_PORT}
       - CLIENT=${COMPOSE_FILE}
