--- a/nimbus/Dockerfile.sourcegnosis
+++ b/nimbus/Dockerfile.sourcegnosis
@@ -6,13 +6,13 @@ ARG DOCKER_TAG
 
 ARG BUILD_TARGET
 
-RUN apt-get update && apt-get install -y build-essential git libpcre3-dev ca-certificates
+RUN apt-get update && apt-get install -y build-essential git ca-certificates
 
 WORKDIR /usr/src
-RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-beacon-chain && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && make -j$(nproc) gnosis-chain-build"
+RUN bash -c "git clone --recurse-submodules https://github.com/status-im/nimbus-eth2 && cd nimbus-eth2 && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:nim-pr; git checkout nim-pr; else git checkout ${BUILD_TARGET}; fi && make -j$(nproc) update && make -j$(nproc) gnosis-build nimbus_validator_client"
 
 # Pull all binaries into a second stage deploy debian container
-FROM debian:bullseye-slim
+FROM debian:bullseye-slim as consensus
 
 ARG USER=user
 ARG UID=10002
@@ -39,12 +39,10 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
-RUN mkdir -p /var/lib/nimbus && chown ${USER}:${USER} /var/lib/nimbus && chmod 700 /var/lib/nimbus
-
+RUN mkdir -p /var/lib/nimbus/ee-secret && chown -R ${USER}:${USER} /var/lib/nimbus && chmod 700 /var/lib/nimbus && chmod 777 /var/lib/nimbus/ee-secret
 
 # Cannot assume buildkit, hence no chmod
-COPY --from=builder --chown=${USER}:${USER} /usr/src/nim-beacon-chain/build/nimbus_beacon_node_gnosis /usr/local/bin/nimbus_beacon_node
-COPY --chown=${USER}:${USER} ./validator-import.sh /usr/local/bin/
+COPY --from=builder --chown=${USER}:${USER} /usr/src/nimbus-eth2/build/nimbus_beacon_node_gnosis /usr/local/bin/nimbus_beacon_node
 COPY --chown=${USER}:${USER} ./docker-entrypoint.sh /usr/local/bin/
 # Belt and suspenders
 RUN chmod -R 755 /usr/local/bin/*
@@ -52,3 +50,32 @@ RUN chmod -R 755 /usr/local/bin/*
 USER ${USER}
 
 ENTRYPOINT ["nimbus_beacon_node"]
+
+FROM debian:bullseye-slim as validator
+
+ARG USER=user
+ARG UID=10000
+
+# See https://stackoverflow.com/a/55757473/12429735RUN
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/nonexistent" \
+    --shell "/sbin/nologin" \
+    --no-create-home \
+    --uid "${UID}" \
+    "${USER}"
+
+# Create data mount point with permissions
+RUN mkdir -p /var/lib/nimbus && chown -R ${USER}:${USER} /var/lib/nimbus && chmod -R 700 /var/lib/nimbus
+
+# Cannot assume buildkit, hence no chmod
+COPY --from=builder --chown=${USER}:${USER} /usr/src/nimbus-eth2/build/nimbus_validator_client /usr/local/bin/
+COPY --chown=${USER}:${USER} ./validator-import.sh /usr/local/bin/
+COPY --chown=${USER}:${USER} ./docker-entrypoint-vc.sh /usr/local/bin/
+# Belt and suspenders
+RUN chmod -R 755 /usr/local/bin/*
+
+USER ${USER}
+
+ENTRYPOINT ["nimbus_validator_client"]
