Extremely experimental support for Reth

--- a/default.env
+++ b/default.env
@@ -197,6 +197,12 @@ NIMEL_SRC_BUILD_TARGET=master
 NIMEL_DOCKER_TAG=nonesuch
 NIMEL_DOCKERFILE=Dockerfile.source
 
+# Reth
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+RETH_SRC_BUILD_TARGET=main
+RETH_DOCKER_TAG=nonesuch
+RETH_DOCKERFILE=Dockerfile.source
+
 # staking-deposit-cli
 # SRC build target can be a tag or a branch
 DEPCLI_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
