Initial support for archive mode

--- a/besu.yml
+++ b/besu.yml
@@ -21,8 +21,9 @@ services:
     user: besu
     environment:
       - JAVA_OPTS=${BESU_HEAP:--XX:SoftMaxHeapSize=3g -Xmx5g}
-      - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET=${JWT_SECRET:-}
       - EL_EXTRAS=${EL_EXTRAS:-}
+      - ARCHIVE_MODE=${ARCHIVE_MODE:-}
     volumes:
       - besu-eth1-data:/var/lib/besu
       - /etc/localtime:/etc/localtime:ro
@@ -74,10 +75,6 @@ services:
       - 0.0.0.0
       - --metrics-port
       - "6060"
-      - --data-storage-format=BONSAI
-#      - --Xbonsai-use-snapshots=true
-#      - --sync-mode=X_CHECKPOINT
-      - --sync-mode=X_SNAP
       - --nat-method=DOCKER
 volumes:
   besu-eth1-data:
