--- a/geth.yml
+++ b/geth.yml
@@ -20,9 +20,10 @@ services:
     image: geth:local
     user: geth
     environment:
-      - JWT_SECRET=${JWT_SECRET}
-      - LOG_LEVEL=${LOG_LEVEL}
+      - JWT_SECRET=${JWT_SECRET:-}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
       - EL_EXTRAS=${EL_EXTRAS:-}
+      - ARCHIVE_MODE=${ARCHIVE_MODE:-}
     volumes:
       - geth-eth1-data:/var/lib/goethereum
       - /etc/localtime:/etc/localtime:ro
