--- a/reth.yml
+++ b/reth.yml
@@ -21,8 +21,9 @@ services:
     image: reth:local
     user: reth
     environment:
-      - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET=${JWT_SECRET:-}
       - EL_EXTRAS=${EL_EXTRAS:-}
+      - LOG_LEVEL=${LOG_LEVEL:-info}
     volumes:
       - reth-el-data:/var/lib/reth
       - /etc/localtime:/etc/localtime:ro
@@ -45,7 +46,6 @@ services:
       - ${NETWORK}
       - --metrics
       - 0.0.0.0:6060
-      - --verbose
       - --config
       - /var/lib/reth/reth.toml
 volumes:
