--- a/default.env
+++ b/default.env
@@ -103,10 +103,10 @@ VC_EXTRAS=
 BESU_HEAP=
 TEKU_HEAP=
 
-# Set this to true to run archive mode instead of pruned for both CL
+# Set this to true to sync an archive node instead of pruned for both CL
 # and EL. Caution that this may a) require a fresh sync and b) will
 # use a lot of disk - in the case of Geth >12TB, for example.
-ARCHIVE_MODE=false
+ARCHIVE_NODE=false
 
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
