--- a/erigon.yml
+++ b/erigon.yml
@@ -22,7 +22,7 @@ services:
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - EL_EXTRAS=${EL_EXTRAS:-}
-      - ARCHIVE_MODE=${ARCHIVE_MODE:-}
+      - ARCHIVE_NODE=${ARCHIVE_NODE:-}
     volumes:
       - erigon-el-data:/var/lib/erigon
       - /etc/localtime:/etc/localtime:ro
