Source build changes

--- a/default.env
+++ b/default.env
@@ -147,7 +147,7 @@ NIM_DOCKER_VC_TAG=multiarch-latest
 NIM_DOCKERFILE=Dockerfile.binary
 
 # Teku
-# SRC build target can be a tag or a branch
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 TEKU_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 TEKU_DOCKER_TAG=latest
 TEKU_DOCKERFILE=Dockerfile.binary
@@ -160,7 +160,7 @@ LH_DOCKER_TAG=latest-modern
 LH_DOCKERFILE=Dockerfile.binary
 
 # Prysm
-# SRC build target can be a tag or a branch
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 PRYSM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 PRYSM_DOCKER_TAG=stable
 PRYSM_DOCKER_VC_TAG=stable
@@ -179,13 +179,13 @@ BESU_DOCKER_TAG=latest-openjdk-latest
 BESU_DOCKERFILE=Dockerfile.binary
 
 # Erigon
-# SRC build target can be a tag or a branch
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 ERIGON_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 ERIGON_DOCKER_TAG=stable
 ERIGON_DOCKERFILE=Dockerfile.binary
 
 # Nethermind
-# SRC build target can be a tag or a branch
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 NM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 NM_DOCKER_TAG=latest
 NM_DOCKERFILE=Dockerfile.binary
@@ -209,7 +209,7 @@ RETH_DOCKER_TAG=nonesuch
 RETH_DOCKERFILE=Dockerfile.source
 
 # staking-deposit-cli
-# SRC build target can be a tag or a branch
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
 DEPCLI_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
