--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -13,7 +13,8 @@ RUN bash -c "git clone https://github.com/ConsenSys/teku.git \
   && cd teku \
   && git config advice.detachedHead false \
   && git fetch --all --tags \
-  && git checkout ${BUILD_TARGET} \
+  && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:teku-pr; git checkout teku-pr; \
+  else git checkout ${BUILD_TARGET}; fi \
   && git submodule update --init --recursive \
   && ./gradlew installDist"
 
