--- a/eth-metrics/Dockerfile
+++ b/eth-metrics/Dockerfile
@@ -1,3 +1,3 @@
 FROM samcm/ethereum-metrics-exporter:debian-latest
 
-COPY ./docker-entrypoint.sh /usr/local/bin
+COPY ./docker-entrypoint.sh /usr/local/bin/
