--- a/ethdo.yml
+++ b/ethdo.yml
@@ -4,8 +4,13 @@ services:
   ethdo:
     profiles: ["tools"]
     restart: "no"
-    image: wealdtech/ethdo:latest
+    build:
+      context: ./ethdo
+    image: ethdo:local
+    volumes:
+      - ./.eth:/app/.eth
     entrypoint:
+      - docker-entrypoint.sh
       - /app/ethdo
       -  --connection
       - http://consensus:5052
