Support offline withdrawal address change with ethdo (#1166)
* Support offline withdrawal address change with ethdo

* Version 2.2.8

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ ext-network.yml.original
 .eth/*
 !.eth/README.md
 !.eth/validator_keys/.empty
-!.eth/ethdo/.empty
+!.eth/ethdo/README.md
+!.eth/ethdo/create-withdrawal-change.sh
 *.swp
 alertmanager/config.yml
 prometheus/custom-prom.yml
