--- a/grafana-cloud.yml
+++ b/grafana-cloud.yml
@@ -48,7 +48,7 @@ services:
       - CLIENT=${COMPOSE_FILE}
     entrypoint:
       - docker-entrypoint.sh
-      - /ethereum-metrics-exporter
+      - /exporter
     <<: *logging
 
   node-exporter:
