Set GRAFFITI as container env to be available in entrypoint script

--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -19,6 +19,7 @@ services:
     image: lighthouse:local
     user: lhvalidator
     environment:
+      - GRAFFITI=${GRAFFITI}
       - MEV_BOOST=${MEV_BOOST}
       - BEACON_STATS_API=${BEACON_STATS_API}
       - BEACON_STATS_MACHINE=${BEACON_STATS_MACHINE}
