--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -13,6 +13,7 @@ services:
     image: lodestar:local
     user: lsvalidator
     environment:
+      - GRAFFITI=${GRAFFITI}
       - MEV_BOOST=${MEV_BOOST}
       - DOPPELGANGER=${DOPPELGANGER}
       - VC_EXTRAS=${VC_EXTRAS:-}
