--- a/teku-vc-only.yml
+++ b/teku-vc-only.yml
@@ -23,6 +23,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - JAVA_OPTS=${TEKU_HEAP:--XX:SoftMaxHeapSize=2g -Xmx5g}
+      - GRAFFITI=${GRAFFITI}
       - MEV_BOOST=${MEV_BOOST}
       - VC_EXTRAS=${VC_EXTRAS:-}
     <<: *logging
