Revert "Add option to omit graffiti to use validator default (#1165)"
This reverts commit ecdc16af892572978b920aaa2f28b6cd543c82c6.

--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -37,6 +37,8 @@ services:
       - /var/lib/lighthouse
       - --beacon-nodes
       - ${CL_NODE:-http://consensus:5052}
+      - --graffiti
+      - ${GRAFFITI}
       - --network
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
