--- a/nimbus-vc-only.yml
+++ b/nimbus-vc-only.yml
@@ -37,6 +37,7 @@ services:
       - --data-dir=/var/lib/nimbus
       - --non-interactive
       - --beacon-node=${CL_NODE}
+      - --graffiti=${GRAFFITI}
       - --metrics
       - --metrics-port=8009
       - --metrics-address=0.0.0.0
