--- a/lodestar.yml
+++ b/lodestar.yml
@@ -103,6 +103,8 @@ services:
       - "8009"
       - --metrics.address
       - 0.0.0.0
+      - --graffiti
+      - ${GRAFFITI}
       - --logLevel
       - ${LOG_LEVEL}
       - --network
