--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -41,6 +41,8 @@ services:
       - /var/lib/prysm/
       - --beacon-rpc-provider
       - ${CL_NODE:-http://consensus:4000}
+      - --graffiti
+      - ${GRAFFITI}
       - --verbosity
       - ${LOG_LEVEL}
       - --${NETWORK}
