Revert graffiti changes (#1173)
* Revert "Add option to omit graffiti to use validator default (#1165)"

This reverts commit ecdc16af892572978b920aaa2f28b6cd543c82c6.

* Revert "Set GRAFFITI as container env to be available in entrypoint script (#1172)"

This reverts commit b0124d6c3334bf047b07c086a53d56156a793c7d.

--- a/lighthouse-vc-only.yml
+++ b/lighthouse-vc-only.yml
@@ -19,7 +19,6 @@ services:
     image: lighthouse:local
     user: lhvalidator
     environment:
-      - GRAFFITI=${GRAFFITI}
       - MEV_BOOST=${MEV_BOOST}
       - BEACON_STATS_API=${BEACON_STATS_API}
       - BEACON_STATS_MACHINE=${BEACON_STATS_MACHINE}
@@ -37,6 +36,8 @@ services:
       - /var/lib/lighthouse
       - --beacon-nodes
       - ${CL_NODE:-http://consensus:5052}
+      - --graffiti
+      - ${GRAFFITI}
       - --network
       - ${NETWORK}
       - --debug-level=${LOG_LEVEL}
