--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -13,7 +13,6 @@ services:
     image: lodestar:local
     user: lsvalidator
     environment:
-      - GRAFFITI=${GRAFFITI}
       - MEV_BOOST=${MEV_BOOST}
       - DOPPELGANGER=${DOPPELGANGER}
       - VC_EXTRAS=${VC_EXTRAS:-}
@@ -42,6 +41,8 @@ services:
       - "8009"
       - --metrics.address
       - 0.0.0.0
+      - --graffiti
+      - ${GRAFFITI}
       - --logLevel
       - ${LOG_LEVEL}
       - --network
