--- a/lodestar.yml
+++ b/lodestar.yml
@@ -72,7 +72,6 @@ services:
     image: lodestar:local
     user: lsvalidator
     environment:
-      - GRAFFITI=${GRAFFITI}
       - MEV_BOOST=${MEV_BOOST}
       - DOPPELGANGER=${DOPPELGANGER}
       - VC_EXTRAS=${VC_EXTRAS:-}
@@ -103,6 +102,8 @@ services:
       - "8009"
       - --metrics.address
       - 0.0.0.0
+      - --graffiti
+      - ${GRAFFITI}
       - --logLevel
       - ${LOG_LEVEL}
       - --network
