--- a/prysm.yml
+++ b/prysm.yml
@@ -86,7 +86,6 @@ services:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - GRAFFITI=${GRAFFITI}
       - MEV_BOOST=${MEV_BOOST}
       - DOPPELGANGER=${DOPPELGANGER}
       - VC_EXTRAS=${VC_EXTRAS:-}
@@ -100,6 +99,8 @@ services:
       - /var/lib/prysm/
       - --beacon-rpc-provider
       - consensus:4000
+      - --graffiti
+      - ${GRAFFITI}
       - --verbosity
       - ${LOG_LEVEL}
       - --${NETWORK}
