--- a/nimbus-cl-only.yml
+++ b/nimbus-cl-only.yml
@@ -80,7 +80,7 @@ services:
       - traefik.http.routers.${CL_HOST:-cl}.tls.certresolver=letsencrypt
       - traefik.http.routers.${CL_HOST:-cl}lb.service=${CL_HOST:-cl}
       - traefik.http.routers.${CL_HOST:-cl}lb.entrypoints=websecure
-      - traefik.http.routers.${CL_HOST:-cl}lb.rule=Host(`${CL_LB:cl-lb}.${DOMAIN}`)
+      - traefik.http.routers.${CL_HOST:-cl}lb.rule=Host(`${CL_LB:-cl-lb}.${DOMAIN}`)
       - traefik.http.routers.${CL_HOST:-cl}lb.tls.certresolver=letsencrypt
       - traefik.http.services.${CL_HOST:-cl}.loadbalancer.server.port=${CL_REST_PORT:-5052}
 volumes:
