--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -14,6 +14,8 @@ services:
     user: lsvalidator
     environment:
       - MEV_BOOST=${MEV_BOOST}
+      - BEACON_STATS_API=${BEACON_STATS_API}
+      - BEACON_STATS_MACHINE=${BEACON_STATS_MACHINE}
       - DOPPELGANGER=${DOPPELGANGER}
       - VC_EXTRAS=${VC_EXTRAS:-}
     volumes:
