Default Lighthouse source build target `stable`

--- a/default.env
+++ b/default.env
@@ -154,7 +154,7 @@ TEKU_DOCKERFILE=Dockerfile.binary
 
 # Lighthouse
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-LH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+LH_SRC_BUILD_TARGET=stable
 # If Lighthouse terminates with a SIGILL, make this "latest"
 LH_DOCKER_TAG=latest-modern
 LH_DOCKERFILE=Dockerfile.binary
