Lighthouse jemalloc, Prysm change messages, web3signer

--- a/default.env
+++ b/default.env
@@ -172,6 +172,10 @@ LS_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))
 LS_DOCKER_TAG=latest
 LS_DOCKERFILE=Dockerfile.binary
 
+# Web3Signer
+W3S_DOCKER_TAG=latest
+PG_DOCKER_TAG=alpine
+
 # Besu
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 BESU_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
