--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -1,25 +1,25 @@
 # Build Lighthouse in a stock Rust build container
-#FROM rust:bullseye as builder
+FROM rust:bullseye as builder
 # mallinfo2 is useful for memory troubleshooting but requires glibc 2.33. Debian Bullseye ships with 2.31
-FROM ubuntu:jammy as builder
+#FROM ubuntu:jammy as builder
 
 ARG BUILD_TARGET
-ENV FEATURES malloc_utils/mallinfo2,modern,gnosis
+ENV FEATURES modern,gnosis,slasher-lmdb,slasher-mdbx,jemalloc
 
-#RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y cmake libclang-dev
+RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y cmake libclang-dev protobuf-compiler
 # Need a bit more in Ubuntu
-RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y cmake libclang-dev build-essential git curl protobuf-compiler
+#RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y cmake libclang-dev build-essential git curl protobuf-compiler
 
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | bash -s -- -y
-ENV PATH="/root/.cargo/bin:${PATH}"
+#RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | bash -s -- -y
+#ENV PATH="/root/.cargo/bin:${PATH}"
 
 WORKDIR /usr/src
 RUN bash -c "git clone https://github.com/sigp/lighthouse.git && cd lighthouse && git config advice.detachedHead false && git fetch --all --tags && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:lh-pr; git checkout lh-pr; else git checkout ${BUILD_TARGET}; fi && make"
 
 # Pull all binaries into a second stage deploy debian container
-#FROM debian:bullseye-slim
+FROM debian:bullseye-slim
 # mallinfo2 is useful for memory troubleshooting but requires glibc 2.33. Debian Bullseye ships with 2.31
-FROM ubuntu:jammy
+#FROM ubuntu:jammy
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
@@ -76,7 +76,7 @@ RUN adduser \
 RUN mkdir -p /var/lib/lighthouse/validators && chown ${USER}:${USER} /var/lib/lighthouse/validators && chmod 700 /var/lib/lighthouse/validators
 
 # Cannot assume buildkit, hence no chmod
-COPY --from=builder --chown=${USER}:${USER} /root/.cargo/bin/lighthouse /usr/local/bin/
+COPY --from=builder --chown=${USER}:${USER} /usr/local/cargo/bin/lighthouse /usr/local/bin/
 COPY --chown=${USER}:${USER} ./validator-exit.sh /usr/local/bin/
 COPY --chown=${USER}:${USER} ./docker-entrypoint-vc.sh /usr/local/bin/
 # Belt and suspenders
