--- a/eth-metrics/Dockerfile
+++ b/eth-metrics/Dockerfile
@@ -1,3 +1,3 @@
-FROM samcm/ethereum-metrics-exporter:debian-latest
+FROM samcm/ethereum-metrics-exporter:0.20.0-debian
 
 COPY ./docker-entrypoint.sh /usr/local/bin/
